# riscv-em

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  cpu.h.gcov  disk.img  dtb.dtb  dtb.dts  dts.dts  fs.img  fw_jump.elf  kernel  log.txt  minimal.dtb  minimal.dts  objects.mk  perf.data  premake5.lua  qemu.dtb  qemu.dts  riscvemu  rvvm.dtb  slib_x86_64.lib  test.txt  tests_elf_to_bin.sh  toolchain-mingw64.cmake  tst.txt
include/: CMakeLists.txt  blk_io.hpp  cpu.h  cpu.hpp  csr.h  decode.h  decode.hpp  device.hpp  dram.h  elfparser.hpp  gdbstub.hpp  hart.hpp  host.hpp  instset.h  jit.hpp  jit_h.hpp  jit_insts.hpp  libfdt.hpp  machine.hpp  main.hpp  memory_map.h  memory_map.hpp  mmio.h  mmio.hpp  mmu.hpp  opcodes.h  pmp.hpp  sdl.hpp  termios.hpp
include/defines/: csr.hpp  rvem.hpp  traps.hpp
include/devices/: aclint.hpp  clint.hpp  dtb.hpp  framebuffer.hpp  hid_api.hpp  hid_dev.hpp  hid_keyboard.hpp  i2c_hid.hpp  i2c_oc.hpp  mmio.h  pci.hpp  plic.hpp  rom.hpp  syscon.hpp  uart.hpp  virtio.hpp  virtio_blk.hpp
include/devices/hid/: hid-over-i2c.hpp  hid_keyboard.hpp  hid_test.hpp
include/devices/i2c/: i2c-core.hpp  i2c-slave.hpp
include/gui/: window.hpp  x11.hpp
include/gui/wayland/: wayland.hpp  xdg-shell-client-protocol.h
include/rvjit/: rvjit.hpp  rvjit_decode.hpp  rvjit_emit.hpp  rvjit_x86_64.hpp
include/structs/: timecmp_st.hpp  timer_st.hpp
include/utils/: hid_report_descriptor.hpp
lua/starfall/libs_cl/: rvmachine.lua
programs/: dtb.dtb  dtb.dts  fs.img  fw_jump.elf  kernel  qemu.dtb  qemu.dts  rootfs.ext2
source/: module.cpp
src/: argparser.cpp  blk_io.cpp  cpu.cpp  decode.cpp  dram.cpp  elfparser.cpp  gdbstub.cpp  hart.cpp  libfdt.cpp  machine.cpp  main.cpp  mmio.cpp  mmu.cpp  module.cpp  pmp.cpp  priv.cpp  rv32a.cpp  rv32c.cpp  rv32i.cpp  rv32m.cpp  rv64a.cpp  rv64c.cpp  rv64i.cpp  rv64m.cpp  rvmachine.cpp  rvmachine.hpp  sdl.cpp  system.cpp  termios.cpp  zicsr.cpp  zifencei.cpp
src/devices/: aclint.cpp  clint.cpp  dtb.cpp  framebuffer.cpp  hid_keyboard.cpp  i2c_hid.cpp  i2c_oc.cpp  mmio.cpp  pci.cpp  plic.cpp  rom.cpp  syscon.cpp  uart.cpp  virtio.cpp  virtio_blk.cpp
src/devices/hid/: hid-over-i2c.cpp  hid_keyboard.cpp  hid_test.cpp
src/devices/i2c/: i2c-core.cpp
src/include/: device.hpp  elfparser.hpp  hart.hpp  host.hpp  machine.hpp  memory_map.hpp  mmio.hpp
src/include/defines/: csr.hpp
src/include/devices/: aclint.hpp  syscon.hpp  virtio_blk.hpp
src/jit/: jit.cpp  jit_rv64a.cpp  jit_rv64i.cpp  jit_rv64m.cpp  jit_zicsr.cpp
src/misc/: xdg-shell-protocol.cpp
src/rvjit/: rvjit.cpp  rvjit_decode.cpp
src/sets/: priv.cpp  rv64a.cpp  rv64c.cpp  rv64d.cpp  rv64f.cpp  rv64i.cpp  rv64m.cpp  system.cpp  zba.cpp  zbb.cpp  zbc.cpp  zbs.cpp  zicboz.cpp  zicsr.cpp  zifencei.cpp
unused/devices/: plic.cpp  rom.cpp  virtio_blk.cpp
unused/devices_i/: aclint.hpp  dtb.hpp  rom.hpp  syscon.hpp  uart.hpp  virtio_blk.hpp
unused/sets/: rv64d.cpp  rv64m.cpp
